--- a/src/tools/rust-installer/Cargo.toml
+++ b/src/tools/rust-installer/Cargo.toml
@@ -12,10 +12,12 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.19"
 flate2 = "1.0.1"
+num_cpus = "1"
 rayon = "1.0"
 tar = "0.4.38"
 walkdir = "2"
 xz2 = "0.1.4"
+zstd = { version = "0.13", features = ["zstdmt"] }
 
 [dependencies.clap]
 features = ["derive"]
